Готовая главная страница)

--- a/index.html
+++ b/index.html
@@ -676,18 +676,12 @@
 
         </div>
 
-        <div class="pages_wrapper" style="display: flex; justify-content: space-around;">
-            <a href="index.html" style="display: block; height: 40px; width: 40px; border: 1px solid black; text-align: center;">1</a>
-
-            <a href="index.html" style="display: block; height: 40px; width: 40px; border: 1px solid black; text-align: center;">1</a>
-
-            <a href="index.html" style="display: block; height: 40px; width: 40px; border: 1px solid black; text-align: center;">1</a>
-
-            <a href="index.html" style="display: block; height: 40px; width: 40px; border: 1px solid black; text-align: center;">1</a>
-
-            <a href="index.html" style="display: block; height: 40px; width: 40px; border: 1px solid black; text-align: center;">1</a>
-
-            <a href="index.html" style="display: block; height: 40px; width: 40px; border: 1px solid black; text-align: center;">1</a>
+        <div class="pages_wrapper">
+            <a href="index.html">1</a>
+            <a href="index.html">2</a>
+            <a href="index.html">3</a>
+            <span>...</span>
+            <a href="index.html">10</a>
         </div>
     </section>
     <!--Контент-->
